totally removed bouncycastle dependency because i simply could not get jpackage/jlink to work while using bouncycastle